--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.1.5",
+    "@types/d3": "^7.4.3",
+    "d3": "^7.9.0",
     "framer-motion": "^11.3.29",
     "next": "14.2.6",
     "react": "^18",
