--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.1.5",
+    "@react-email/components": "^0.0.23",
     "@types/d3": "^7.4.3",
     "d3": "^7.9.0",
     "framer-motion": "^11.3.29",
     "next": "14.2.6",
     "react": "^18",
     "react-dom": "^18",
+    "react-email": "^3.0.1",
     "resend": "^4.0.0"
   },
   "devDependencies": {
