--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@heroicons/react": "^2.1.5",
     "@react-email/components": "^0.0.23",
     "@types/d3": "^7.4.3",
+    "@vercel/analytics": "^1.3.1",
     "d3": "^7.9.0",
     "framer-motion": "^11.3.29",
     "next": "14.2.6",
